# gamelib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
example/: CMakeLists.txt
example/src/: main.cc
lib/: CMakeLists.txt
lib/src/: game.cc  game.hh  gamelib.hh  resourcemanager.cc  resourcemanager.hh  scene.hh  ui.cc  ui.hh
